# radar1

dv_trigger/: CMakeLists.txt  package.xml
dv_trigger/include/dv_trigger/: dv_trigger.hpp
dv_trigger/src/: dv_trigger.cpp  main.cpp
img_recognizer/: CMakeLists.txt  package.xml
img_recognizer/include/img_recognizer/: recognizer_node.hpp  target_detector.hpp
img_recognizer/src/: recognizer_node.cpp  target_detector.cpp
judge_bridge/: CMakeLists.txt  package.xml
judge_bridge/include/judge_bridge/: crc.hpp  decode.hpp  judge_bridge.hpp  protocol.hpp  serial.hpp
judge_bridge/src/: judge_bridge.cpp  main.cpp  serial.cpp
livox_v1_lidar/: CMakeLists.txt  README.md  package.xml
livox_v1_lidar/include/livox_v1_lidar/: fast_crc.hpp  protocal.hpp  publisher.hpp
livox_v1_lidar/src/: publisher.cpp
mind_camera/: CMakeLists.txt  package.xml
mind_camera/config/: camera_info.yaml  mind12mm.yaml
mind_camera/include/: mind_camera.h
mind_camera/src/: info_pub.cpp  mind_camera.cpp
nn_detector/: CMakeLists.txt  package.xml
nn_detector/include/detector/: detector.h  detector_lib.h  detector_node.h  detector_trt.h  detector_vino.h  net_decoder.h
nn_detector/include/utils/: common.h  data.h
nn_detector/models/: armor.mapping  armor.onnx  armor.toml  armor.xml  trad.toml  v5.1_R803G.toml
nn_detector/models/trad/: cnn.onnx  label.txt
nn_detector/models/v5.1_R803G/: v5.1_R803G.onnx  v5.1_R803G.xml
nn_detector/src/: common.cpp  data.cpp  detector.cpp  detector_lib.cpp  detector_node.cpp  detector_trt.cpp  detector_vino.cpp  net_decoder.cpp
pc_aligner/: CMakeLists.txt  package.xml
pc_aligner/include/pc_aligner/: aligner_node.hpp
pc_aligner/src/: aligner_node.cpp  auto_aligner.cpp  main.cpp  manual_aligner.cpp
pc_detector/: CMakeLists.txt  README.md  package.xml
pc_detector/include/: Clustering.h  KalmanFilter.h  RosNode.h  TargetMap.h  Utility.h  VisualizerHelper.h  VoxelGrid.h
pc_detector/src/: KalmanFilter.cpp  RosNode_prepare.cpp  RosNode_solve.cpp  TargetMap.cpp  VoxelGrid.cpp
radar_bringup/launch/: 25_home.launch.py  icp.py  radar_with_23bag.launch.py  record.py
radar_bringup/resource/: 24_bg2align_fix1.stl  24_bg2filter_fix1.stl  home_demo.stl  preselect.pcd  preselect.txt
radar_interface/: CMakeLists.txt  package.xml
radar_interface/include/radar_interface/: livox_struct.hpp  team_color.hpp
radar_interface/msg/: Armor.msg  DetectedTarget.msg  DetectedTargetArray.msg  FeedbackTarget.msg  FeedbackTargetArray.msg  MatchResult.msg  MatchedTarget.msg  Target.msg  TargetArray.msg
radar_interface/msg/judge/: GameRobotHP.msg  MapCommand.msg  MapRobotData.msg  RadarCmd.msg  RadarInfo.msg  RadarMarkData.msg  UwbData.msg
radar_interface/srv/: AutoAlign.srv  Detect.srv
radar_supervisor/: package.xml  setup.cfg  setup.py
radar_supervisor/radar_supervisor/: main_window.py  radar_supervisor.py
radar_supervisor/radar_supervisor/utils/: click_callback.py
radar_supervisor/radar_supervisor/widget/: img_recognizer.py  judge_bridge.py  nn_detector.py  pc_aligner.py  status_button.py  target_matcher.py
radar_utils/: package.xml  setup.cfg  setup.py
radar_utils/radar_utils/: icp.py  marker_pub.py  record.py  selector.py
result_visualizer/: package.xml  setup.cfg  setup.py
result_visualizer/result_visualizer/: result_visualizer.py
target_matcher/: CMakeLists.txt  package.xml
target_matcher/include/target_matcher/: matcher_node.hpp  utils.hpp  visualization.hpp
target_matcher/src/: main.cpp  matcher_node.cpp  pos_reinforce.cpp  visualization.cpp
target_multiplexer/: CMakeLists.txt  package.xml
target_multiplexer/config/: blind_guess.toml
target_multiplexer/include/target_multiplexer/: target_multiplexer.hpp
target_multiplexer/src/: main.cpp  multiplexer.cpp  node.cpp
target_visualizer/: package.xml  setup.cfg  setup.py
target_visualizer/target_visualizer/: target_visualizer.py
