<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>judge_bridge</name>
  <version>0.1.0</version>
  <description>A Referee System Handler</description>
  <maintainer email="gnulonglin@gmail.com">longlin</maintainer>
  <license>The MIT License</license>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>radar_interface</depend>
  <depend>boost</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
